##########  ##  ##      ##  ##########  ##    ##    ##  ##      ##  ##      ##  ##      ##
##      ##  ##  ##      ##  ##      ##  ##    ##    ##  ##      ##  ##      ##  ##      ##
##      ##  ##    ########  ##      ##  ##    ##    ##    ######      ######    ##      ##

HighMoon - Duell im All.
Copyright (c) 2005, Patrick Gerdsmeier <patrick@gerdsmeier.net>

2005 February 19
----------------
HighMoon v1.2 - Added Extras to buy Shield-Power or new Weapons:
Added Heavy, Cluster and Exploding Shots. Auto-detecting and 
setting prefered Language. Window-Icon will be shown again.
Added Spanish and Russian Language. Disabled Galaxy-Warp 
while shooting.

HighMoon v1.2 - Extras zum Kaufen von Schildstaerke oder
neuen Waffen: Schwerer Schuss und Streuschuss. Bevorzugte
Sprache wird automatisch eingestellt. Fenster-Icon wird
wieder gezeigt. Spanisch und Russisch hinzugefuegt. Galaxie 
wird nicht mehr gewarpt, falls ein Schuss aktiv ist.

2005 February 04
----------------
HighMoon v1.1.2 - Some changes in Graphics (Wormholes, Blackholes,
Planettextures, Background etc.) Adjustment of some Constants.
Added French, Polish and Portuguese Language.

HighMoon v1.1.2 - Kleinere Aenderungen an der Grafik (Wurmloecher,
Schwarze Loecher, Background etc.). Kleine Aenderung an den 
Konstanten. Franzoesisch, Polnisch und Portugiesisch hinzugefuegt.

2005 January 30:
----------------
HighMoon v1.1.1 - Planets got Moons and Rings. Fixed a little
Bug with French Keyboard Layout. 

HighMoon v1.1.1 - Planeten haben jetzt Monde und Ringe. Kleinen 
Bug mit franzoesischem Tastaturlayout behoben. 

2005 January 26:
----------------
HighMoon v1.1 - Restructured Galaxy-Objects. It is much easier now
to add new Weapons and Spaceobjects. Changed the look of Wormholes.
Removed Bug in AI - now Computermoves will be calculated much faster.
Shielddamage now depends on the Shoot. Added commandline Options 
-h (--help), -v (--version), -f (--fullscreen) and -vi (--videoinfo).